# pyclassifier

./: LICENSE  README.md  __init__.py  conf.py  conftest.py  hashtron.classifier.rst  hashtron.datasets.mnist.rst  hashtron.datasets.rst  hashtron.datasets.squareroot.rst  hashtron.datasets.stringhash.rst  hashtron.hash.rst  hashtron.layer.full.rst  hashtron.layer.majpool2d.rst  hashtron.layer.rst  hashtron.net.feedforward.rst  hashtron.net.rst  hashtron.rst  index.rst  pyproject.toml  pytest.ini  setup.py  usage.rst
cell/: constructor.py  test_forward.py  test_view.py
datasets/mnist/: mnist.py  test_mnist.py
hash/: test_hash.py
hashtron/: constructor.py  forward.py  model.py  test_forward.py  test_view.py  view.py
hashtron/classifier/: constructor.py  test_forward.py  test_view.py
hashtron/datasets/mnist/: mnist.py  test_mnist.py
hashtron/datasets/squareroot/: api.py
hashtron/datasets/stringhash/: bytehash.py  stringhash.py  test_stringhash.py
hashtron/hash/: hash.py  test_hash.py
hashtron/hashtron/: constructor.py  forward.py  test_forward.py  test_view.py
hashtron/layer/: combiner.py  layer.py
hashtron/layer/full/: combiner.py  layer.py
hashtron/layer/majpool2d/: combiner.py  layer.py  test_combiner.py
hashtron/net/feedforward/: feedforward_network.py  io.py  net.py  test_net.py
hashtron/quaternary/: __init__.py
layer/: layer.py
layer/majpool2d/: combiner.py  layer.py  test_combiner.py
net/: input.py  single_value.py
net/feedforward/: feedforward_network.py  io.py  net.py  test_net.py
